versao teste e intermediaria

--- a/acasoundscapemap.html
+++ b/acasoundscapemap.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="/aca-sound-map/map_style.css">
+<link rel="stylesheet" href="acasoundscapemap/map_style.css">
   <!-- Google fonts-->
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 
@@ -34,7 +34,7 @@
     </div>
 </div>
   
-<img src="aca-sound-map/logo-menu.png" class="openbtn" onclick="openNav()"> 
+<img src="acasoundscapemap/logo-menu.png" class="openbtn" onclick="openNav()"> 
 
   <script>
     var geocoder = new MapboxGeocoder({
@@ -178,7 +178,7 @@ for (i = 0; i < coll.length; i++) {
 
     
 <content>
-    <img src="aca-sound-map/logo.png" alt="aca"> 
+    <img src="acasoundscapemap/logo.png" alt="aca"> 
     <p>Listeners is a sonic cartography of the Canaveral National Seashore through its inhabitants. Workers, neighbours or visitors are invited to share a listening experience of their favorite place in the park. They are portrayed in video while listening, inviting the audience to listen with them.</p>
 </content>
     
