--- a/acasoundscapemap.html
+++ b/acasoundscapemap.html
@@ -69,7 +69,7 @@
         type: "GET",
         //YOUR TURN: Replace with csv export link
         //https://www.mapbox.com/impact-tools/sheet-mapper
-        url: 'https://docs.google.com/spreadsheets/d/1JRGhIp50D34MDaLmGGp1GLOnKqx2JS-UI1XAGlyDZu4/gviz/tq?tqx=out:csv&sheet=Video',
+        url: 'acasoundscape-assets/aca.csv',
         dataType: "text",
         success: function (csvData) { makeGeoJSON(csvData); }
       });
