control group left

--- a/acasoundscapemap.html
+++ b/acasoundscapemap.html
@@ -155,7 +155,7 @@
             enableHighAccuracy: true
             },
             trackUserLocation: true
-            })
+            }), 'top-left'
         );
 
       // ZOOM
